Fixed collection card image styling for mobile. Cards were being stretched with really small screens.

--- a/client/src/sass/Cards/CardsCollection.scss
+++ b/client/src/sass/Cards/CardsCollection.scss
@@ -15,6 +15,7 @@
             max-width: 50%;
             display: flex;
             justify-content: center;
+            align-items: flex-start;
             img {
                 border-radius: 14px;
                 max-width: max-content;
